--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,6 +1,6 @@
 <%= link_to 'Add a new todo', new_todo_path %>
 <ul class="todos">
-  <%= @todos.each do |todo| %>
+  <%  @todos.each do |todo| %>
     <li>
       <%= todo.title %>
     </li>
