--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -1,8 +1,9 @@
 <%= link_to 'Add a new todo', new_todo_path %>
 <ul class="todos">
   <%  @todos.each do |todo| %>
-    <li>
+    <li class="<%= 'completed' if todo.completed? %>">
       <%= todo.title %>
+      <%= button_to "Mark complete", todo_completions_path(todo) %>
     </li>
   <% end %>
 </ul>
