--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -3,7 +3,11 @@
   <%  @todos.each do |todo| %>
     <li class="<%= 'completed' if todo.completed? %>">
       <%= todo.title %>
-      <%= button_to "Mark complete", todo_completions_path(todo) %>
+      <% if todo.completed?%>
+        <%= button_to "Mark incomplete", todo_completions_path(todo), method: :destroy %>
+      <% else %>
+        <%= button_to "Mark complete", todo_completions_path(todo) %>
+      <% end %>
     </li>
   <% end %>
 </ul>
